--- a/work.html
+++ b/work.html
@@ -801,32 +801,17 @@ mm.add("(max-width: 900px)", () => {
 <script>
 gsap.registerPlugin(ScrollTrigger);
 
-// optional but helps iOS address bar resize jank
-ScrollTrigger.config({ ignoreMobileResize: true });
-
 (() => {
+  // ✅ desktop only
+  const isMobile = window.matchMedia("(hover: none) and (pointer: coarse)").matches;
+  if (isMobile) return;
+
   const section = document.querySelector("#pin-gallery");
-  if (!section) return;
+  const stage   = section?.querySelector(".pin-gallery__stage");
+  const track   = section?.querySelector(".pin-gallery__stack");
+  if (!section || !stage || !track) return;
 
-  const stage = section.querySelector(".pin-gallery__stage");
-  const track = section.querySelector(".pin-gallery__stack");
-  if (!stage || !track) return;
-
-  // keep refs so we can cleanly kill
-  let tween = null;
-  let trigger = null;
-
-  function killThisSection() {
-    if (trigger) { trigger.kill(); trigger = null; }
-    if (tween) { tween.kill(); tween = null; }
-    gsap.killTweensOf(track);
-    gsap.set(track, { x: 0 });
-  }
-
-  // -------------------------
-  // DESKTOP: EXACTLY YOUR CODE
-  // -------------------------
-  function buildDesktop() {
+  function build() {
     // kill triggers created for this section
     ScrollTrigger.getAll().forEach(st => {
       if (st.trigger === section) st.kill();
@@ -839,98 +824,36 @@ ScrollTrigger.config({ ignoreMobileResize: true });
     // reset
     gsap.set(track, { x: 0 });
 
-    // Measure how far we need to move so the tail spacer becomes visible at the end.
     const stageRect = stage.getBoundingClientRect();
     const tailRect  = tailSpacer.getBoundingClientRect();
-
     const tailRightFromTrackStart = (tailRect.right - stageRect.left);
-    const endX = -(tailRightFromTrackStart - stage.clientWidth);
 
+    const endX = -(tailRightFromTrackStart - stage.clientWidth);
     const finalX = Math.min(0, endX);
     const scrollDistance = Math.abs(finalX);
 
-    tween = gsap.to(track, {
+    gsap.to(track, {
       x: finalX,
-      ease: "none"
-    });
-
-    trigger = ScrollTrigger.create({
-      trigger: section,
-      start: "top top",
-      end: () => "+=" + scrollDistance,
-      pin: true,
-      scrub: true,
-      anticipatePin: 1,
-      invalidateOnRefresh: true,
-      animation: tween
-      // markers: true
+      ease: "none",
+      scrollTrigger: {
+        trigger: section,
+        start: "top top",
+        end: () => "+=" + scrollDistance,
+        pin: true,
+        scrub: true,
+        anticipatePin: 1,
+        invalidateOnRefresh: true
+      }
     });
 
     ScrollTrigger.refresh();
   }
 
-  // --------------------------------------
-  // MOBILE: SAME EFFECT, iOS-FRIENDLY MATH
-  // --------------------------------------
-  function buildMobile() {
-    killThisSection();
-
-    // stable distance on iOS
-    const maxX = Math.max(0, track.scrollWidth - stage.clientWidth);
-    if (maxX === 0) return;
-
-    tween = gsap.to(track, { x: -maxX, ease: "none" });
-
-    trigger = ScrollTrigger.create({
-      trigger: section,
-      start: "top top",
-      end: "+=" + maxX,
-      pin: true,
-      pinType: "fixed",     // ✅ iOS stability
-      scrub: true,
-      anticipatePin: 1,
-      invalidateOnRefresh: true,
-      animation: tween
-    });
-
-    // ✅ refresh AFTER creating trigger, next frame (prevents “stop”)
-    requestAnimationFrame(() => ScrollTrigger.refresh());
-  }
-
-  // -------------------------
-  // MEDIA SPLIT
-  // -------------------------
-  ScrollTrigger.matchMedia({
-    "(min-width: 901px)": () => {
-      const onResize = () => {
-        clearTimeout(window.__pgTO);
-        window.__pgTO = setTimeout(buildDesktop, 150);
-      };
-
-      window.addEventListener("load", buildDesktop, { passive: true });
-      window.addEventListener("resize", onResize, { passive: true });
-
-      return () => {
-        window.removeEventListener("resize", onResize);
-        killThisSection();
-      };
-    },
-
-    "(max-width: 900px)": () => {
-      const onResize = () => {
-        clearTimeout(window.__pgTOm);
-        window.__pgTOm = setTimeout(buildMobile, 200);
-      };
-
-      window.addEventListener("load", buildMobile, { passive: true });
-      window.addEventListener("resize", onResize, { passive: true });
-
-      return () => {
-        window.removeEventListener("resize", onResize);
-        killThisSection();
-      };
-    }
-  });
+  window.addEventListener("load", build, { passive: true });
+  window.addEventListener("resize", () => {
+    clearTimeout(window.__pgTO);
+    window.__pgTO = setTimeout(build, 150);
+  }, { passive: true });
 })();
 </script>
 
