--- a/inquiry.html
+++ b/inquiry.html
@@ -270,6 +270,7 @@
   position: relative;
   overflow: hidden;
   z-index: 1;
+  margin-top: 2.5rem;
 }
 
 /* keep the “fade” capability if you want it (optional) */
@@ -304,8 +305,8 @@
 /* ✅ mobile: make it responsive + guaranteed visible */
 @media (max-width: 768px){
   .inquiry-submit{
-    width: 100%;
-    max-width: 520px;
+    
+    
     margin-right: 0;
     display: flex !important;
     visibility: visible !important;
