--- a/work.html
+++ b/work.html
@@ -1494,7 +1494,13 @@ document.addEventListener("scroll", () => {
 
         <a href="/inquiry.html" class="footer-pill">
           Send Inquiry
-          <span class="footer-arrow" aria-hidden="true">↗</span>
+          <span class="footer-arrow" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round" class="arrow-icon">
+              <path d="M7 17L17 7" />
+              <path d="M7 7h10v10" />
+            </svg>
+          </span>
         </a>
       </div>
 
