--- a/work.html
+++ b/work.html
@@ -858,7 +858,57 @@ gsap.registerPlugin(ScrollTrigger);
 })();
 </script>
 
+<script>
+gsap.registerPlugin(ScrollTrigger);
 
+(() => {
+  // ✅ mobile only
+  const isMobile = window.matchMedia("(hover: none) and (pointer: coarse)").matches;
+  if (!isMobile) return;
+
+  const section = document.querySelector("#pin-gallery");
+  const stage   = section?.querySelector(".pin-gallery__stage");
+  const track   = section?.querySelector(".pin-gallery__stack");
+  if (!section || !stage || !track) return;
+
+  function buildMobile() {
+    // kill any existing triggers for safety
+    ScrollTrigger.getAll().forEach(st => {
+      if (st.trigger === section) st.kill();
+    });
+    gsap.killTweensOf(track);
+
+    // reset transforms
+    gsap.set(track, { x: 0, y: 0 });
+
+    // 👉 MOBILE BEHAVIOR OPTION 1 (recommended)
+    // Natural vertical scroll with subtle reveal motion
+    gsap.fromTo(
+      track,
+      { y: 40, opacity: 0 },
+      {
+        y: 0,
+        opacity: 1,
+        ease: "power2.out",
+        scrollTrigger: {
+          trigger: section,
+          start: "top 80%",
+          end: "top 30%",
+          scrub: true,
+        }
+      }
+    );
+
+    ScrollTrigger.refresh();
+  }
+
+  window.addEventListener("load", buildMobile, { passive: true });
+  window.addEventListener("resize", () => {
+    clearTimeout(window.__pgMobileTO);
+    window.__pgMobileTO = setTimeout(buildMobile, 150);
+  }, { passive: true });
+})();
+</script>
 
 
 <style>
