--- a/inquiry.html
+++ b/inquiry.html
@@ -37,42 +37,69 @@
 
 </head>
 <body>
-    <nav class="navbar">
+ <nav class="navbar">
     <div class="navbar__container">
-<div class="navbar__right">
-    <div class="dropdown-email">
-       <a href="mailto:christian@mcvdesign.com" class="navbar__email">
+      <div class="navbar__left">
+        <a href="/" id="navbar__logo" class="logo">
+          <img class="logo1" src="images/logo2.png" alt="Logo" />
+        </a>
+      </div>
+<!--
+      <ul class="navbar__menu navbar__center">
+        <li class="navbar__item"><a href="#" class="navbar__links"><span class="link-text">Work</span></a></li>
+        <li class="navbar__item"><a href="#" class="navbar__links"><span class="link-text">Expertise</span></a></li>
+        <li class="navbar__item"><a href="#" class="navbar__links"><span class="link-text">Process</span></a></li>
+        <li class="navbar__item"><a href="#" class="navbar__links"><span class="link-text">About</span></a></li>
+        <li class="navbar__item"><a href="#" class="navbar__links"><span class="link-text">Latest</span></a></li>
+      </ul>
+-->
+      <div class="navbar__right">
+        <a href="mailto:christian@mcvdesign.com" class="navbar__email">
   christian@mcvdesign.com
 </a>
+        
+        <div class="navbar__contact"><span></span></div>
       </div>
 
-    <div class="navbar__contact"><span></span></div>
-    <div class="dropdown-menu" id="navDropdown">
+      <div id="mobile-menu" class="navbar__toggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+    </div>
+  </nav>
+<!--DROPDOWN MENU-->
+<div class="dropdown-menu" id="navDropdown">
+    
    <div class="dropdown-video-bg">
     <video autoplay muted loop playsinline>
-      <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/donut9.mp4" type="video/mp4" />
+      <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/donut%20short%20x.mp4" type="video/mp4" />
     </video>
   </div>
 
   <div class="dropdown-content">
-      <button class="close-menu" id="closeMenu">×</button>
-        <ul class="dropdown-links">
-          <li class="dropdown-mask">
-            <a href="/index.html" class="dropdown-link">Home</a>
-          </li>
-          <li class="dropdown-mask">
-            <a href="/services.html" class="dropdown-link">Services</a>
-          </li>
-          <li class="dropdown-mask">
-            <a href="/work.html" class="dropdown-link">Work</a>
-          </li>
-          <li class="dropdown-mask">
-            <a href="/inquiry.html" class="dropdown-link">Contact</a>
-          </li>
-        </ul>
+  <button class="close-menu" id="closeMenu">×</button>
+  <ul class="dropdown-links">
+  <li class="dropdown-mask">
+    <a href="/index.html" class="dropdown-link">Home</a>
+  </li>
+  <li class="dropdown-mask">
+    <a href="/services.html" class="dropdown-link">Services</a>
+  </li>
+  <li class="dropdown-mask">
+    <a href="/work.html" class="dropdown-link">Work</a>
+  </li>
+  <li class="dropdown-mask">
+    <a href="/inquiry.html" class="dropdown-link">Contact</a>
+  </li>
+</ul>
 
 
-  
+  <div class="dropdown-email">
+        <a href="mailto:christian@mcvdesign.com" class="navbar__email">
+          christian@mcvdesign.com
+        </a>
+      </div>
   
   <div class="dropdown-copyright"><h2>Copyright © 2025</h2></div>
   <div class="social-button-container">
@@ -82,18 +109,9 @@
       <button class="bottom-btn">Behance</button>
     </div>
     </div>
-</div>
-</div>
-</div>
-</nav>
+</div> 
 
 
-
-    <div class="dropdown-email">
-        <a href="mailto:christian@mcvdesign.com" class="navbar__email">
-  christian@mcvdesign.com
-</a>
-      </div>
 
     <div class="inquiry-container">
   <div class="inquiry-left">
@@ -419,24 +437,6 @@ textarea.user-touched:invalid {
 
 textarea.user-touched:invalid:focus {
   animation: shake 0.2s ease-in-out 2;
-}
-
-/* Force dropdown list spacing to match other pages */
-#navDropdown .dropdown-links{
-  margin: 2rem 0 0;
-  padding: 0;
-  list-style: none;
-}
-
-#navDropdown .dropdown-mask{
-  margin: 0.2rem 0;      /* control spacing here */
-  padding: 0;            /* kill any inherited padding */
-  line-height: 0.5;        /* normalize */
-  overflow: hidden;
-}
-
-#navDropdown .dropdown-link{
-  line-height: 1;        /* normalize */
 }
 
 </style>
