work mobile space fix n script for bg

--- a/work.html
+++ b/work.html
@@ -86,13 +86,15 @@
   const CELL_SIZE = 18;        // must match CSS .cell width/height
   const GAP = 6;               // must match CSS grid gap
   const PAD = 10;              // must match CSS grid padding
-  const SPARKS_PER_MOVE = 6;   // ✅ minimal amount of squares
-  const RADIUS_PX = 55;        // ✅ small random area around cursor
+  const SPARKS_PER_MOVE = 6;   // minimal amount of squares
+  const RADIUS_PX = 55;        // small random area around cursor/finger
   const LINGER_MS = 400;       // how long it stays green
 
   let gridEl, cells = [];
   let cols = 0, rows = 0;
-  let raf = null, mx = -9999, my = -9999;
+
+  let raf = null;
+  let mx = -9999, my = -9999;
 
   function build(){
     root.innerHTML = "";
@@ -129,7 +131,6 @@
   }
 
   function spark(x, y){
-    // choose a few random points near cursor
     for (let i = 0; i < SPARKS_PER_MOVE; i++){
       const a = Math.random() * Math.PI * 2;
       const r = Math.random() * RADIUS_PX;
@@ -148,8 +149,8 @@
     }
   }
 
-  function onMove(e){
-    mx = e.clientX; my = e.clientY;
+  function queueSpark(x, y){
+    mx = x; my = y;
     if (raf) return;
     raf = requestAnimationFrame(() => {
       spark(mx, my);
@@ -157,9 +158,28 @@
     });
   }
 
+  // ✅ Pointer events (desktop + many mobiles)
+  function onPointerMove(e){ queueSpark(e.clientX, e.clientY); }
+  function onPointerDown(e){ queueSpark(e.clientX, e.clientY); }
+
+  // ✅ Touch fallback (iOS Safari can be picky)
+  function onTouch(e){
+    const t = e.touches && e.touches[0];
+    if (!t) return;
+    queueSpark(t.clientX, t.clientY);
+  }
+
   build();
+
   window.addEventListener("resize", build, { passive: true });
-  window.addEventListener("pointermove", onMove, { passive: true });
+
+  // Pointer
+  window.addEventListener("pointermove", onPointerMove, { passive: true });
+  window.addEventListener("pointerdown", onPointerDown, { passive: true });
+
+  // Touch fallback
+  window.addEventListener("touchstart", onTouch, { passive: true });
+  window.addEventListener("touchmove", onTouch, { passive: true });
 })();
 </script>
  <nav class="navbar">
@@ -1288,8 +1308,21 @@ body {
 }
 
 }
+/*THERE WAS SPACE ON MOBILE AT TOP OF PIN GALLERY SECTION*/
+@media (max-width: 900px){
+  .section-spacer{
+    height: 48px; /* or 0 if you want it tight */
+  }
 
+  .pin-gallery{
+    padding-top: 2.5rem;  /* was huge via clamp */
+    padding-bottom: 3rem;
+  }
 
+  .pin-gallery__wrap{
+    margin-top: 0;        /* removes extra gap */
+  }
+}
 </style>
 <script>
   //BALL SCROLL
